feat: add tests and queueFile
